--- a/PocketGram/PocketGram/Base.lproj/Main.storyboard
+++ b/PocketGram/PocketGram/Base.lproj/Main.storyboard
@@ -111,7 +111,7 @@
                                 <rect key="frame" x="0.0" y="92" width="414" height="804"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="445" id="gws-pd-dat" customClass="PostCell" customModule="PocketGram" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="445" id="gws-pd-dat" customClass="PostCell" customModule="PocketGram" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="414" height="445"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gws-pd-dat" id="nGu-ql-KDc">
@@ -157,6 +157,41 @@
                                             <outlet property="usernamLabel" destination="bQH-sT-f7J" id="5iO-Qj-74l"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" id="Qx2-y0-ICu" userLabel="CommentCell" customClass="CommentCell" customModule="PocketGram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="495" width="414" height="37.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qx2-y0-ICu" id="nQA-Ha-RKO">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="37.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@nathan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4I-Bs-YgX">
+                                                    <rect key="frame" x="16" y="8" width="72" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Awesome shot!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qiq-jr-OXy">
+                                                    <rect key="frame" x="96" y="8" width="116" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="qiq-jr-OXy" firstAttribute="top" secondItem="nQA-Ha-RKO" secondAttribute="top" constant="8" id="AGr-AL-ZXQ"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="qiq-jr-OXy" secondAttribute="trailing" constant="8" id="Jgs-XH-PWA"/>
+                                                <constraint firstItem="qiq-jr-OXy" firstAttribute="leading" secondItem="C4I-Bs-YgX" secondAttribute="trailing" constant="8" id="K1P-GE-mI3"/>
+                                                <constraint firstItem="C4I-Bs-YgX" firstAttribute="top" secondItem="nQA-Ha-RKO" secondAttribute="top" constant="8" id="TKq-zc-Kjk"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="qiq-jr-OXy" secondAttribute="bottom" constant="8" id="Yv5-Dl-Ecx"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="C4I-Bs-YgX" secondAttribute="bottom" constant="8" id="a6x-X4-KPZ"/>
+                                                <constraint firstItem="C4I-Bs-YgX" firstAttribute="leading" secondItem="nQA-Ha-RKO" secondAttribute="leading" constant="16" id="qID-6q-KH0"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="commentLabel" destination="qiq-jr-OXy" id="XSl-du-E5u"/>
+                                            <outlet property="usernameLabel" destination="C4I-Bs-YgX" id="hET-9p-eFJ"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
@@ -172,7 +207,7 @@
                     <navigationItem key="navigationItem" id="CfF-Nh-e1h">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="R0L-NZ-w7a">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="GAs-vN-cnf">
-                                <rect key="frame" x="-37" y="-17" width="92" height="33"/>
+                                <rect key="frame" x="20" y="5" width="92" height="34.5"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Logout"/>
